--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "pg": "^8.16.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^10.1.0",
     "three": "^0.182.0"
   }
 }
