Sync local with production - Feb 12 2026
- Pulled all source files from production server to ensure local matches exactly
- 71 files updated to match production versions
- Added pages/_document.js, data/adminSettings.json, data/pages.json (existed on prod, missing locally)
- Added pages/api/team-messages.js, pages/test-payment.js (new files)
- Removed pages/api/customers-new.js (duplicate, not on production)
- Production has migrated many admin pages to fetch/API pattern (DB-backed)
- Set up local PostgreSQL with matching schema (19 tables)
- Database migrations applied: schema.sql, migration-v2.sql, migration-v3-customers-orders.sql

--- a/data/siteConfig.json
+++ b/data/siteConfig.json
@@ -7,11 +7,11 @@
   "primaryColor": "#000000",
   "secondaryColor": "#dc0000",
   "accentColor": "#ff3333",
-  "logoUrl": "",
-  "faviconUrl": "",
+  "logoUrl": "/uploads/site-settings/site-logo-1769366080940-355.jpeg",
+  "faviconUrl": "/uploads/site-settings/site-logo-1768767543121-217.jpeg",
   "fontFamily": "Inter",
   "heroMediaType": "image",
-  "heroMediaUrl": "https://images.unsplash.com/photo-1531415074968-036ba1b575da?w=1600&h=900&fit=crop",
+  "heroMediaUrl": "/uploads/site-settings/site-hero-1768769975223-602.jpeg",
   "heroTitle": "Winter League Cricket",
   "heroSubtitle": "Premium Equipment for Champions",
   "buttonFunnels": {
@@ -106,10 +106,20 @@
   ],
   "paymentConfig": {
     "payfast": {
-      "merchantId": "",
-      "merchantKey": "",
-      "passphrase": "",
-      "testMode": true
+      "merchantId": "3847386",
+      "merchantKey": "25qhve4askybg",
+      "passphrase": "Tcc-sG1ea/Mars",
+      "testMode": false,
+      "sandbox": {
+        "merchantId": "10000100",
+        "merchantKey": "46f0cd694581a",
+        "passphrase": ""
+      },
+      "live": {
+        "merchantId": "3847386",
+        "merchantKey": "25qhve4askybg",
+        "passphrase": "Tcc-sG1ea/Mars"
+      }
     }
   }
 }
