--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
   "dependencies": {
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
+    "@uiw/color-convert": "^2.9.2",
+    "@uiw/react-color-wheel": "^2.9.2",
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
+    "flatpickr": "^4.6.13",
     "formidable": "^3.5.2",
     "next": "^14.2.32",
     "nodemailer": "^7.0.10",
     "pg": "^8.16.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-flatpickr": "^4.0.11",
     "react-markdown": "^10.1.0",
     "three": "^0.182.0"
   }
