Add persistent error logging system and Google Analytics 4 integration
Error Logging:
- lib/logger.js: Structured JSON file logger with rotation (5MB/file, 10 files)
- lib/apiErrorLogger.js: API route error-catching wrapper
- server.js: Rewritten with structured logging, pid tracking, dual file output
- ecosystem.config.js: Changed to fork mode (single instance), proper log paths
- pages/api/error-logs.js: Admin API to view logs and stats
- pages/admin/error-logs.js: Admin UI log viewer with expandable entries
- Cleaned up 173MB crash.log on production
- Log files: api-errors, app-errors, form-events, payment-events, server

Google Analytics 4:
- pages/_app.js: GA4 script with placeholder ID (G-XXXXXXXXXX)
- lib/analytics.js: Tracking utility for forms, registrations, checkout, payments
- components/FormDisplay.js: Tracks form_start, form_step, form_submit, form_error
- pages/checkout.js: Tracks begin_checkout, payment_start
- Set NEXT_PUBLIC_GA_ID env var or replace placeholder when GA4 property is created

API Error Logging:
- pages/api/form-submissions.js: Logs submission errors and form events
- pages/api/submissions.js: Logs submission errors and form events
- pages/api/orders.js: Logs order API errors

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,9 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
+# server logs (generated at runtime)
+/logs/
+
 # local env files
 .env*.local
 .env
