--- a/nginx-config.conf
+++ b/nginx-config.conf
@@ -29,6 +29,13 @@ server {
     # Logging
     access_log /var/log/nginx/cricket-shop-access.log;
     error_log /var/log/nginx/cricket-shop-error.log;
+
+    # --- Maintenance page during restarts ---
+    # Serve maintenance.html directly from filesystem (not proxied)
+    location = /maintenance.html {
+        root /home/vmycnmyo/winterleague-cricket/public;
+        internal;
+    }
     
     # Serve uploaded files directly
     location /uploads/ {
@@ -40,10 +47,10 @@ server {
     
     # Proxy to Next.js app on port 3001
     location / {
-        proxy_pass http://localhost:3001;  # CHANGE port if needed
+        proxy_pass http://localhost:3001;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
+        proxy_set_header Connection upgrade;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -54,6 +61,10 @@ server {
         proxy_connect_timeout 60s;
         proxy_send_timeout 60s;
         proxy_read_timeout 60s;
+
+        # Intercept upstream errors and show maintenance page
+        proxy_intercept_errors on;
+        error_page 502 503 504 /maintenance.html;
     }
     
     # Next.js static files optimization
