Add HTTP 500 to maintenance page error intercept
- error_page now catches 500 502 503 504 (was only 502 503 504)
- Handles Next.js 500 errors during builds/recompilation

--- a/nginx-config.conf
+++ b/nginx-config.conf
@@ -64,7 +64,7 @@ server {
 
         # Intercept upstream errors and show maintenance page
         proxy_intercept_errors on;
-        error_page 502 503 504 /maintenance.html;
+        error_page 500 502 503 504 /maintenance.html;
     }
     
     # Next.js static files optimization
